[project]
name = "ducky"
version = "1.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.115.11",
    "ollama>=0.6.0",
    "openai>=1.60.2",
    "rich>=13.9.4",
    "termcolor>=2.5.0",
]

[project.scripts]
ducky = "ducky.ducky:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.4",
]
