[project]
name = "rubber-ducky"
version = "1.5.0"
description = "Quick CLI do-it-all tool. Use natural language to spit out bash commands"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.115.11",
    "ollama>=0.6.0",
    "openai>=1.60.2",
    "prompt-toolkit>=3.0.48",
    "rich>=13.9.4",
    "termcolor>=2.5.0",
]

[project.scripts]
ducky = "ducky.ducky:main"
rubber-ducky = "ducky.ducky:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ducky = ["*.py"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.4",
]
